<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:background="@color/cardview_light_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNamePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:text="@string/tvNamePrompt"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/etUserName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnStartQuiz"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:padding="5dp"
            android:text="@string/btnStartQuiz"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvWhoops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="@string/tvWhoops"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/tvError"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvOwenJones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvOwenJones"
        android:textAlignment="center"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>